# YoloDoLabel

./: README.md
cpp/: CMakeLists.txt  config.yaml  main.cpp
cpp/include/: DataLoader.h  DatasetLoader.h  LabelMapper.h  LabelWriter.h  YoloAnnotator.h  inference.h
cpp/src/: DataLoader.cpp  DatasetLoader.cpp  LabelMapper.cpp  LabelWriter.cpp  YoloAnnotator.cpp  inference.cpp
